Return sectioned payload for schedule drivers constructors
